# HydroGPU

./: .gitignore  README.md  Readme.md  TODO.md  compute_runoff_matrices.py  compute_sr.py  download_rainfall_from_gee.py  download_rainfall_from_gee_merge_tifs.py  justfile  movie_per_watershed.py  permws_vectorization.py  pyproject.toml  utils.py
Trash/: validation_get_source_microwatersheds.py
config/: .gitignore  config.toml
doc/: pip_freeze.txt  workflow.d2
legacy_src/: compute_legacy_flow_accumulation.py  compute_legacy_flow_direction.py  compute_legacy_microwatershed_step2.py  compute_legacy_stream_order.py
src/: authenticate.py  download.py  pydrive_settings.yaml  run.py  runoff_only_with_rainfall.py  runoff_only_with_rainfall_prereqs.py  utils.py
src/algorithms/: __init__.py  flows.py  microwatershed.py  runoff.py  timeseries.py
src/downloads/: __init__.py  dem.py  lulc.py  mws.py  rainfall.py  soil.py
tifs/: .gitignore  dem.tif  facc.tif  fd.tif  lulc.tif  mws.geojson  mws.tif  soil.tif  timeseries.geojson
tifs/boundary_polygons/: justfile  masalia_boundary.geojson
