[project]
name = "hydrogpu-rainfallonly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda13x>=13.6.0",
    "earthengine-api>=1.7.4",
    "geopandas>=1.1.2",
    "natsort>=8.4.0",
    "pydrive2>=1.21.3",
    "rasterio>=1.5.0",
    "rioxarray>=0.21.0",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "xee>=0.0.24",
]
